--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop --host=0.0.0.0",
+    "start": "gatsby develop --host=0.0.0.0",
     "build": "gatsby build",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve --host=0.0.0.0",
     "clean": "gatsby clean"
   },
   "license": "0BSD",
